--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
     <Button android:id="@+id/btnLogout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/margin_big"
+            android:layout_marginBottom="@dimen/pm_margin_big"
             android:layout_gravity="bottom|center_horizontal"
             android:text="@string/btn_logout"/>
 
