--- a/peermountain_sdk/src/main/res/drawable/pm_blue_circle_button.xml
+++ b/peermountain_sdk/src/main/res/drawable/pm_blue_circle_button.xml
@@ -3,10 +3,10 @@
     android:shape="oval"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <size
-        android:height="@dimen/circle_btn_size"
-        android:width="@dimen/circle_btn_size" />
+        android:height="@dimen/pm_circle_btn_size"
+        android:width="@dimen/pm_circle_btn_size" />
     <solid
-        android:color="@color/keyword_btn_selected"/>
+        android:color="@color/pm_circle_btn"/>
     <!--<stroke-->
         <!--android:color="@color/dot_line"-->
         <!--android:width="1dp" />-->
