--- a/peermountain_sdk/src/main/res/drawable/pm_blue_dot.xml
+++ b/peermountain_sdk/src/main/res/drawable/pm_blue_dot.xml
@@ -3,10 +3,10 @@
     android:shape="oval"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <size
-        android:height="@dimen/dot_size"
-        android:width="@dimen/dot_size" />
+        android:height="@dimen/pm_dot_size"
+        android:width="@dimen/pm_dot_size" />
     <solid
-        android:color="@color/colorAccent"/>
+        android:color="@color/pm_dot_accent"/>
     <!--<stroke-->
         <!--android:color="@color/dot_line"-->
         <!--android:width="1dp" />-->
