--- a/peermountain_sdk/src/main/res/drawable/pm_card_white.xml
+++ b/peermountain_sdk/src/main/res/drawable/pm_card_white.xml
@@ -4,6 +4,7 @@
     <size
         android:width="80dp"
         android:height="150dp"/>
-    <corners android:radius="@dimen/corners"/>
-    <solid android:color="@color/white"/>
+    <corners android:topLeftRadius="@dimen/pm_corners" android:topRightRadius="@dimen/pm_corners"/>
+    <solid android:color="@color/pm_1st_card_bkg"/>
+    <stroke android:color="@color/pm_1st_card_border" android:width="@dimen/pm_card_border_size"/>
 </shape>
