--- a/peermountain_sdk/src/main/res/drawable/pm_keywords_btn_selector.xml
+++ b/peermountain_sdk/src/main/res/drawable/pm_keywords_btn_selector.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@color/keyword_btn_selected" android:state_enabled="true"/>
-    <item android:drawable="@color/keyword_bkg" android:state_enabled="false" />
-    <item android:drawable="@color/keyword_bkg"/>
+    <item android:drawable="@color/pm_square_btn_selected" android:state_enabled="true"/>
+    <item android:drawable="@color/pm_square_btn_deselected" android:state_enabled="false" />
+    <item android:drawable="@color/pm_square_btn_deselected"/>
 </selector>
