--- a/peermountain_sdk/src/main/res/drawable/pm_square_border.xml
+++ b/peermountain_sdk/src/main/res/drawable/pm_square_border.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <size android:width="40dp" android:height="20dp"/>
-    <stroke android:color="@color/white" android:width="1dp"/>
+    <stroke android:color="@color/pm_fingerprint_dialog_btn_border" android:width="1dp"/>
     <corners android:radius="4dp"/>
 </shape>
