--- a/peermountain_sdk/src/main/res/layout/pm_activity_register.xml
+++ b/peermountain_sdk/src/main/res/layout/pm_activity_register.xml
@@ -8,7 +8,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/pm_bkg"
     android:orientation="vertical"
-    android:paddingTop="@dimen/margin_big"
+    android:paddingTop="@dimen/pm_margin_big"
     tools:context="com.peermountain.sdk.ui.register.RegisterActivity">
 
     <include layout="@layout/pm_toolbar"/>
