--- a/peermountain_sdk/src/main/res/layout/pm_activity_scan_id.xml
+++ b/peermountain_sdk/src/main/res/layout/pm_activity_scan_id.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="@dimen/margin_normal">
+        android:padding="@dimen/pm_margin_normal">
 
         <ProgressBar
             android:id="@+id/pbPmProgress"
@@ -29,50 +29,50 @@
 
         <TextView
             android:id="@+id/tvPmNumber"
-            style="@style/id_tv"/>
+            style="@style/pm_id_tv"/>
 
         <TextView
             android:id="@+id/tvPmFirstName"
-            style="@style/id_tv"
+            style="@style/pm_id_tv"
             android:text="@string/pm_msg_prepare_id"
             android:visibility="visible"/>
 
         <TextView
             android:id="@+id/tvPmLastName"
-            style="@style/id_tv"/>
+            style="@style/pm_id_tv"/>
 
         <TextView
             android:id="@+id/tvPmCountry"
-            style="@style/id_tv"/>
+            style="@style/pm_id_tv"/>
 
         <TextView
             android:id="@+id/tvPmExpiration"
-            style="@style/id_tv"/>
+            style="@style/pm_id_tv"/>
 
         <TextView
             android:id="@+id/tvPmIssued"
-            style="@style/id_tv"/>
+            style="@style/pm_id_tv"/>
 
         <TextView
             android:id="@+id/tvPmValid"
-            style="@style/id_tv"/>
+            style="@style/pm_id_tv"/>
 
         <TextView
             android:id="@+id/tvPmDob"
-            style="@style/id_tv"/>
+            style="@style/pm_id_tv"/>
 
 
         <ImageView
             android:id="@+id/ivPmFaceImage"
-            style="@style/id_iv"/>
+            style="@style/pm_id_iv"/>
 
         <ImageView
             android:id="@+id/ivPmFullImage"
-            style="@style/id_iv"/>
+            style="@style/pm_id_iv"/>
 
         <ImageView
             android:id="@+id/ivPmFullImageBack"
-            style="@style/id_iv"/>
+            style="@style/pm_id_iv"/>
 
         <View
             android:layout_width="1dp"
@@ -84,7 +84,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|center_horizontal"
-            android:layout_margin="@dimen/margin_normal"
+            android:layout_margin="@dimen/pm_margin_normal"
             android:text="@string/pm_btn_scan_id"/>
 
     </LinearLayout>
