--- a/peermountain_sdk/src/main/res/layout/pm_fast_login_dialog.xml
+++ b/peermountain_sdk/src/main/res/layout/pm_fast_login_dialog.xml
@@ -2,18 +2,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:background="@color/colorAccent"
+              android:background="@color/pm_fingerprint_dialog_bkg"
               android:gravity="center"
               android:orientation="vertical"
-              android:padding="@dimen/margin_big">
+              android:padding="@dimen/pm_margin_big">
 
-    <TextView android:id="@+id/tvTitleFastDialog"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:gravity="center"
-              android:textColor="@color/white"
-              android:text="@string/dialog_title_login"
-              android:textSize="16sp"/>
+    <TextView
+        android:id="@+id/tvTitleFastDialog"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="@string/pm_dialog_title_login"
+        android:textColor="@color/pm_fingerprint_dialog_text_color"
+        android:textSize="16sp"/>
 
     <TextView
         android:id="@+id/tvFingerBtn"
@@ -24,8 +25,8 @@
         android:background="@drawable/pm_square_border"
         android:drawableTop="@drawable/pm_ic_fingerprint_30dp"
         android:padding="12dp"
-        android:textColor="@color/white"
-        android:text="@string/btn_fingerprint"/>
+        android:textColor="@color/pm_fingerprint_dialog_text_color"
+        android:text="@string/pm_btn_fingerprint"/>
 
     <TextView
         android:id="@+id/tvOr"
@@ -57,7 +58,7 @@
         android:gravity="center"
         android:padding="12dp"
         android:text="@string/btn_save_code"
-        android:textColor="@color/white"
+        android:textColor="@color/pm_fingerprint_dialog_text_color"
         android:visibility="gone"/>
 
     <CheckBox
@@ -77,6 +78,6 @@
         android:background="@drawable/pm_square_border"
         android:gravity="center"
         android:padding="12dp"
-        android:text="@string/btn_dont_save_code"
-        android:textColor="@color/white"/>
+        android:text="@string/pm_btn_don_t_save_code"
+        android:textColor="@color/pm_fingerprint_dialog_text_color"/>
 </LinearLayout>
