--- a/peermountain_sdk/src/main/res/layout/pm_fragment_show_scanned_id.xml
+++ b/peermountain_sdk/src/main/res/layout/pm_fragment_show_scanned_id.xml
@@ -3,13 +3,13 @@
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
-             tools:background="@color/white"
+             tools:background="@color/pm_theme_light_bkg"
              tools:context="com.peermountain.sdk.ui.register.ShowScannedIdFragment">
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/grey_line"/>
+        android:background="@color/pm_line"/>
 
     <ScrollView
         android:layout_width="match_parent"
@@ -20,9 +20,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/margin_normal"
+            android:layout_margin="@dimen/pm_margin_normal"
             android:orientation="vertical"
-            android:paddingBottom="@dimen/circle_btn_size">
+            android:paddingBottom="@dimen/pm_circle_btn_size">
 
             <TextView
                 android:id="@+id/tvPmError"
@@ -31,55 +31,55 @@
                 android:textColor="@android:color/holo_red_dark"
                 android:visibility="visible"/>
             <TextView
-                style="@style/id_tv"
+                style="@style/pm_id_tv"
                 android:text="@string/pm_id_scan_lbl"
                 android:textSize="17sp"
                 android:visibility="visible"/>
             <ImageView
                 android:id="@+id/ivPmFullImage"
-                style="@style/id_iv"/>
+                style="@style/pm_id_iv"/>
 
             <ImageView
                 android:id="@+id/ivPmFullImageBack"
-                style="@style/id_iv"/>
+                style="@style/pm_id_iv"/>
 
             <TextView
                 android:id="@+id/tvPmNumber"
-                style="@style/id_tv"/>
+                style="@style/pm_id_tv"/>
 
             <TextView
                 android:id="@+id/tvPmFirstName"
-                style="@style/id_tv"
+                style="@style/pm_id_tv"
                 android:visibility="visible"/>
 
             <TextView
                 android:id="@+id/tvPmLastName"
-                style="@style/id_tv"/>
+                style="@style/pm_id_tv"/>
 
             <TextView
                 android:id="@+id/tvPmCountry"
-                style="@style/id_tv"/>
+                style="@style/pm_id_tv"/>
 
             <TextView
                 android:id="@+id/tvPmExpiration"
-                style="@style/id_tv"/>
+                style="@style/pm_id_tv"/>
 
             <TextView
                 android:id="@+id/tvPmIssued"
-                style="@style/id_tv"/>
+                style="@style/pm_id_tv"/>
 
             <TextView
                 android:id="@+id/tvPmValid"
-                style="@style/id_tv"/>
+                style="@style/pm_id_tv"/>
 
             <TextView
                 android:id="@+id/tvPmDob"
-                style="@style/id_tv"/>
+                style="@style/pm_id_tv"/>
 
 
             <ImageView
                 android:id="@+id/ivPmFaceImage"
-                style="@style/id_iv"/>
+                style="@style/pm_id_iv"/>
 
         </LinearLayout>
     </ScrollView>
@@ -88,7 +88,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|center_horizontal"
-        android:layout_margin="@dimen/margin_normal"
+        android:layout_margin="@dimen/pm_margin_normal"
         android:gravity="center"
         android:orientation="horizontal">
 
@@ -107,7 +107,7 @@
                 android:id="@+id/btnPmScanIdAccept"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/margin_xbig"
+                android:layout_marginLeft="@dimen/pm_margin_xbig"
                 android:layout_gravity="center"
                 android:scaleType="centerInside"
                 android:background="@drawable/pm_blue_circle_button"
