--- a/peermountain_sdk/src/main/res/values-xhdpi/dimens.xml
+++ b/peermountain_sdk/src/main/res/values-xhdpi/dimens.xml
@@ -1,6 +1,6 @@
 <resources>
-    <dimen name="margin_normal">16dp</dimen>
-    <dimen name="margin_small">8dp</dimen>
-    <dimen name="margin_big">24dp</dimen>
+    <dimen name="pm_margin_normal">16dp</dimen>
+    <dimen name="pm_margin_small">8dp</dimen>
+    <dimen name="pm_margin_big">24dp</dimen>
     <dimen name="margin_first_card">48dp</dimen>
 </resources>
