--- a/peermountain_sdk/src/main/res/values/dimens.xml
+++ b/peermountain_sdk/src/main/res/values/dimens.xml
@@ -1,29 +1,26 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="pm_margin_normal">16dp</dimen>
+    <dimen name="pm_margin_small">8dp</dimen>
+    <dimen name="pm_margin_big">24dp</dimen>
+    <dimen name="pm_margin_xbig">40dp</dimen>
+    <dimen name="pm_margin_micro">4dp</dimen>
 
-    <dimen name="margin_normal">16dp</dimen>
-    <dimen name="margin_small">8dp</dimen>
-    <dimen name="margin_big">24dp</dimen>
-    <dimen name="margin_xbig">40dp</dimen>
-    <dimen name="margin_micro">4dp</dimen>
+    <dimen name="pm_inner_icon_size">40dp</dimen>
+    <dimen name="pm_toolbar_size">40dp</dimen>
 
-    <dimen name="inner_icon_size">40dp</dimen>
-    <dimen name="toolbar_size">40dp</dimen>
+    <dimen name="pm_menu_text">18sp</dimen>
+    <dimen name="pm_big_text">18sp</dimen>
+    <dimen name="pm_regular_text">15sp</dimen>
+    <dimen name="pm_shadow_size">15dp</dimen>
 
-    <dimen name="big_text">18sp</dimen>
-    <dimen name="regular_text">15sp</dimen>
-    <dimen name="shadow_size">15dp</dimen>
+    <dimen name="pm_dot_size">15dp</dimen>
+    <dimen name="pm_keyboard_icon_size">40dp</dimen>
+    <dimen name="pm_confirm_btn_size">60dp</dimen>
+    <dimen name="pm_circle_btn_size">50dp</dimen>
 
-    <dimen name="dot_size">15dp</dimen>
-    <dimen name="keyboard_icon_size">40dp</dimen>
-    <dimen name="confirm_btn_size">60dp</dimen>
-    <dimen name="circle_btn_size">50dp</dimen>
-
-    <dimen name="corners">6dp</dimen>
-    <dimen name="shadow">0dp</dimen>
-    <dimen name="nav_header_vertical_spacing">16dp</dimen>
-    <dimen name="nav_header_height">160dp</dimen>
-    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="pm_corners">6dp</dimen>
+    <dimen name="pm_shadow">0dp</dimen>
+    <dimen name="pm_card_border_size">0dp</dimen>
+    <dimen name="pm_avatar_size">70dp</dimen>
 </resources>
