--- a/peermountain_sdk/src/main/res/values/styles.xml
+++ b/peermountain_sdk/src/main/res/values/styles.xml
@@ -1,97 +1,106 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="SdkTheme" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="PmSdkTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:textColor">@color/text_color</item>
+        <!--<item name="android:textColor">@color/pm_text_color</item>-->
     </style>
 
-    <style name="id_tv">
+    <style name="pm_id_tv">
         <!-- Customize your theme here. -->
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginTop">@dimen/margin_normal</item>
-        <item name="android:textColor">@color/text_color_dark</item>
+        <item name="android:layout_marginTop">@dimen/pm_margin_normal</item>
+        <item name="android:textColor">@color/pm_text_color_dark</item>
         <item name="android:visibility">gone</item>
     </style>
 
-    <style name="id_iv">
+    <style name="pm_id_iv">
         <!-- Customize your theme here. -->
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">130dp</item>
-        <item name="android:layout_marginTop">@dimen/margin_normal</item>
+        <item name="android:layout_marginTop">@dimen/pm_margin_normal</item>
         <item name="android:visibility">gone</item>
         <item name="android:scaleType">centerInside</item>
     </style>
 
-    <style name="keyboard_row">
+    <style name="pm_keyboard_row">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">60dp</item>
         <item name="android:gravity">center</item>
         <item name="android:clickable">true</item>
-        <item name="android:layout_marginTop">@dimen/margin_normal</item>
+        <item name="android:layout_marginTop">@dimen/pm_margin_normal</item>
     </style>
 
-    <style name="keyboard_btn">
+    <style name="pm_keyboard_btn">
         <item name="android:layout_width">90dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:orientation">horizontal</item>
         <item name="android:background">@drawable/pm_keyboard_btn</item>
-        <item name="android:layout_marginLeft">@dimen/margin_normal</item>
+        <item name="android:layout_marginLeft">@dimen/pm_margin_normal</item>
     </style>
 
-    <style name="keyboard_btn_num">
+    <style name="pm_keyboard_btn_num">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:textColor">@color/keyboard_text_color</item>
+        <item name="android:textColor">@color/pm_keyboard_text_color</item>
         <item name="android:textSize">40sp</item>
     </style>
 
-    <style name="keyboard_btn_hint">
+    <style name="pm_keyboard_btn_hint">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:textColor">@color/keyboard_text_hint_color</item>
+        <item name="android:textColor">@color/pm_keyboard_text_hint_color</item>
         <item name="android:textSize">18sp</item>
-        <item name="android:layout_marginLeft">@dimen/margin_small</item>
+        <item name="android:layout_marginLeft">@dimen/pm_margin_small</item>
     </style>
 
-    <style name="square_btn">
+    <style name="pm_square_btn">
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">@dimen/confirm_btn_size</item>
+        <item name="android:layout_height">@dimen/pm_confirm_btn_size</item>
         <item name="android:background">@drawable/pm_keywords_btn_selector</item>
-        <item name="android:padding">@dimen/margin_normal</item>
+        <item name="android:padding">@dimen/pm_margin_normal</item>
     </style>
 
-    <style name="reg_profile_lbl">
+    <style name="pm_reg_profile_lbl">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:textColor">@color/text_blue_lbl</item>
+        <item name="android:textColor">@color/pm_text_accent_lbl</item>
         <item name="android:textSize">12sp</item>
-        <item name="android:layout_marginBottom">@dimen/margin_small</item>
-        <item name="android:layout_marginLeft">@dimen/margin_normal</item>
+        <item name="android:layout_marginBottom">@dimen/pm_margin_small</item>
+        <item name="android:layout_marginLeft">@dimen/pm_margin_normal</item>
     </style>
 
-    <style name="reg_profile_et">
+    <style name="pm_reg_profile_et">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginLeft">@dimen/margin_normal</item>
-        <item name="android:textColor">@color/text_blue</item>
+        <item name="android:layout_marginLeft">@dimen/pm_margin_normal</item>
+        <item name="android:textColor">@color/pm_text_accent</item>
         <item name="android:textSize">16sp</item>
         <item name="android:background">@color/transparent</item>
     </style>
 
-    <style name="grey_line">
+    <style name="pm_grey_line">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">1dp</item>
-        <item name="android:background">@color/grey_line</item>
-        <item name="android:layout_marginTop">@dimen/margin_normal</item>
-        <item name="android:layout_marginBottom">@dimen/margin_normal</item>
+        <item name="android:background">@color/pm_line</item>
+        <item name="android:layout_marginTop">@dimen/pm_margin_normal</item>
+        <item name="android:layout_marginBottom">@dimen/pm_margin_normal</item>
     </style>
 
-    <style name="SdkTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
+    <style name="pm_menu_text">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">40dp</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:textColor">@color/pm_text_color</item>
+        <item name="android:layout_marginTop">@dimen/pm_margin_small</item>
+        <item name="android:layout_marginLeft">@dimen/pm_margin_normal</item>
+        <item name="android:layout_marginRight">@dimen/pm_margin_normal</item>
+        <!--<item name="android:layout_marginBottom">@dimen/margin_small</item>-->
+        <item name="android:textSize">@dimen/pm_menu_text</item>
+    </style>
 
-    <style name="SdkTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
 </resources>
