--- a/peermountain_sdk/src/main/res/layout/pm_fragment_register_profile.xml
+++ b/peermountain_sdk/src/main/res/layout/pm_fragment_register_profile.xml
@@ -38,13 +38,8 @@
 
                 <com.makeramen.roundedimageview.RoundedImageView
                     android:id="@+id/pmIvAvatar"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:scaleType="centerCrop"
-                    android:src="@color/pm_avatar_border"
-                    app:riv_border_color="@color/pm_avatar_border"
-                    app:riv_border_width="2dp"
-                    app:riv_oval="true"/>
+                    style="@style/pm_avatar_image"
+                    android:src="@color/pm_avatar_border"/>
 
                 <ImageView
                     android:layout_width="20dp"
